--- a/css/login.css
+++ b/css/login.css
@@ -2,10 +2,10 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 121px;
+  gap: 200px;
   position: relative;
   background-color: var(--background-color);
-  margin-top: 200px;
+  margin-top: 156px;
 }
 
 .login .frame {
@@ -588,104 +588,4 @@ input[type="password"]::placeholder {
     opacity: 1;
     transform: translateY(0);
   }
-}
-
-.fail-modal .modal {
-  font-family: "Montserrat", Helvetica, sans-serif;
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: -16%;
-  width: 100%;
-  /* height: 100%; */
-  overflow: auto;
-}
-
-.fail-modal .modal-content {
-  background-color: #efa2a2;
-  color: #666464;
-  margin: 10% auto;
-  padding: 15px 20px;
-  width: 90%;
-  max-width: 440px;
-  height: 80px;
-  text-align: left;
-  display: flex;
-  align-items: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow */
-  animation: slideDown 0.5s ease forwards; /* Add the animation here */
-}
-
-.fail-modal .modal-icon {
-  margin-right: 15px;
-}
-
-.fail-modal .modal-message {
-  font-size: 14px;
-  flex: 1;
-  text-align: center;
-}
-
-.fail-modal .close-btn {
-  background: none;
-  border: none;
-  padding: 0;
-  margin-left: 10px;
-  cursor: pointer;
-  align-self: flex-start; /* Align button to the top */
-}
-
-.fail-modal .close-btn:hover svg path {
-  fill: #5a5a5a; /* Slightly darker on hover */
-}
-
-.success-modal .modal {
-  font-family: "Montserrat", Helvetica, sans-serif;
-  display: none;
-  position: fixed;
-  z-index: 1000;
-  left: 0;
-  top: -16%;
-  width: 100%;
-  /* height: 100%; */
-  overflow: auto;
-}
-
-.success-modal .modal-content {
-  background-color: #caefa2;
-  color: #666464;
-  margin: 10% auto;
-  padding: 15px 20px;
-  width: 90%;
-  max-width: 440px;
-  height: 80px;
-  text-align: left;
-  display: flex;
-  align-items: center;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow */
-  animation: slideDown 0.5s ease forwards; /* Add the animation here */
-}
-
-.success-modal .modal-icon {
-  margin-right: 15px;
-}
-
-.success-modal .modal-message {
-  font-size: 14px;
-  flex: 1;
-  text-align: center;
-}
-
-.success-modal .close-btn {
-  background: none;
-  border: none;
-  padding: 0;
-  margin-left: 10px;
-  cursor: pointer;
-  align-self: flex-start; /* Align button to the top */
-}
-
-.success-modal .close-btn:hover svg path {
-  fill: #5a5a5a; /* Slightly darker on hover */
 }
